// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Tests DropdownSelector AssistiveText 1`] = `
.c4 {
  font-size: 14px;
  line-height: 22px;
  margin: 0;
  color: var(--charcoal-text2);
}

.c0 {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 4px;
  width: 100%;
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
  opacity: 0.32;
}

.c1 {
  display: grid;
  grid-template-columns: 1fr auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 40px;
  width: 100%;
  box-sizing: border-box;
  border: none;
  cursor: pointer;
  gap: 4px;
  padding-right: 8px;
  padding-left: 8px;
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  -webkit-transition: 0.2s box-shadow,0.2s background-color;
  transition: 0.2s box-shadow,0.2s background-color;
}

.c1:disabled,
.c1[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
}

.c1:not(:disabled):not([aria-disabled]):focus,
.c1[aria-disabled='false']:focus {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c1:not(:disabled):not([aria-disabled]):focus:not(:focus-visible),
.c1[aria-disabled='false']:focus:not(:focus-visible) {
  box-shadow: none;
}

.c1:not(:disabled):not([aria-disabled]):focus-visible,
.c1[aria-disabled='false']:focus-visible {
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c1:not(:disabled):not([aria-disabled]):hover,
.c1[aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c1:not(:disabled):not([aria-disabled]):active,
.c1[aria-disabled='false']:active {
  background-color: var(--charcoal-surface3-press);
}

.c2 {
  text-align: left;
  font-size: 14px;
  line-height: 22px;
  display: flow-root;
  color: var(--charcoal-text2);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c3 {
  color: var(--charcoal-text2);
}

<div
  data-dark={false}
>
  <div
    style={
      Object {
        "width": 288,
      }
    }
  >
    <div
      className="c0"
    >
      <div
        aria-hidden="true"
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "clipPath": "inset(50%)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
      >
        <select
          onChange={[Function]}
          tabIndex={-1}
          value="1"
        >
          <option
            value="1"
          >
            1
          </option>
          <option
            value="2"
          >
            2
          </option>
          <option
            value="3"
          >
            3
          </option>
        </select>
      </div>
      <button
        className="c1"
        onClick={[Function]}
        type="button"
      >
        <span
          className="c2"
        >
          Option 1
        </span>
        <pixiv-icon
          class="c3"
          name="16/Menu"
        />
      </button>
      <p
        className="c4"
      >
        assistiveText
      </p>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests DropdownSelector CustomChildren 1`] = `
.c0 {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 4px;
  width: 100%;
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
  opacity: 0.32;
}

.c1 {
  display: grid;
  grid-template-columns: 1fr auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 40px;
  width: 100%;
  box-sizing: border-box;
  border: none;
  cursor: pointer;
  gap: 4px;
  padding-right: 8px;
  padding-left: 8px;
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  -webkit-transition: 0.2s box-shadow,0.2s background-color;
  transition: 0.2s box-shadow,0.2s background-color;
}

.c1:disabled,
.c1[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
}

.c1:not(:disabled):not([aria-disabled]):focus,
.c1[aria-disabled='false']:focus {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c1:not(:disabled):not([aria-disabled]):focus:not(:focus-visible),
.c1[aria-disabled='false']:focus:not(:focus-visible) {
  box-shadow: none;
}

.c1:not(:disabled):not([aria-disabled]):focus-visible,
.c1[aria-disabled='false']:focus-visible {
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c1:not(:disabled):not([aria-disabled]):hover,
.c1[aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c1:not(:disabled):not([aria-disabled]):active,
.c1[aria-disabled='false']:active {
  background-color: var(--charcoal-surface3-press);
}

.c2 {
  text-align: left;
  font-size: 14px;
  line-height: 22px;
  display: flow-root;
  color: var(--charcoal-text2);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c3 {
  color: var(--charcoal-text2);
}

<div
  data-dark={false}
>
  <div
    style={
      Object {
        "width": 288,
      }
    }
  >
    <div
      className="c0"
    >
      <div
        aria-hidden="true"
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "clipPath": "inset(50%)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
      >
        <select
          onChange={[Function]}
          tabIndex={-1}
          value="bold"
        >
          <option
            value="normal"
          >
            normal
          </option>
          <option
            value="bold"
          >
            bold
          </option>
          <option
            value="italic"
          >
            italic
          </option>
        </select>
      </div>
      <button
        className="c1"
        onClick={[Function]}
        type="button"
      >
        <span
          className="c2"
        >
          <div
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            Bold
          </div>
        </span>
        <pixiv-icon
          class="c3"
          name="16/Menu"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests DropdownSelector Default 1`] = `
.c0 {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 4px;
  width: 100%;
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
  opacity: 0.32;
}

.c1 {
  display: grid;
  grid-template-columns: 1fr auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 40px;
  width: 100%;
  box-sizing: border-box;
  border: none;
  cursor: pointer;
  gap: 4px;
  padding-right: 8px;
  padding-left: 8px;
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  -webkit-transition: 0.2s box-shadow,0.2s background-color;
  transition: 0.2s box-shadow,0.2s background-color;
}

.c1:disabled,
.c1[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
}

.c1:not(:disabled):not([aria-disabled]):focus,
.c1[aria-disabled='false']:focus {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c1:not(:disabled):not([aria-disabled]):focus:not(:focus-visible),
.c1[aria-disabled='false']:focus:not(:focus-visible) {
  box-shadow: none;
}

.c1:not(:disabled):not([aria-disabled]):focus-visible,
.c1[aria-disabled='false']:focus-visible {
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c1:not(:disabled):not([aria-disabled]):hover,
.c1[aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c1:not(:disabled):not([aria-disabled]):active,
.c1[aria-disabled='false']:active {
  background-color: var(--charcoal-surface3-press);
}

.c2 {
  text-align: left;
  font-size: 14px;
  line-height: 22px;
  display: flow-root;
  color: var(--charcoal-text3);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c3 {
  color: var(--charcoal-text2);
}

<div
  data-dark={false}
>
  <div
    style={
      Object {
        "width": 288,
      }
    }
  >
    <div
      className="c0"
    >
      <div
        aria-hidden="true"
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "clipPath": "inset(50%)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
      >
        <select
          onChange={[Function]}
          tabIndex={-1}
          value=""
        >
          <option
            value="1"
          >
            1
          </option>
          <option
            value="2"
          >
            2
          </option>
          <option
            value="3"
          >
            3
          </option>
        </select>
      </div>
      <button
        className="c1"
        onClick={[Function]}
        type="button"
      >
        <span
          className="c2"
        >
          Placeholder
        </span>
        <pixiv-icon
          class="c3"
          name="16/Menu"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests DropdownSelector Disabled 1`] = `
.c0 {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 4px;
  width: 100%;
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
  opacity: 0.32;
}

.c1 {
  display: grid;
  grid-template-columns: 1fr auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 40px;
  width: 100%;
  box-sizing: border-box;
  border: none;
  cursor: pointer;
  gap: 4px;
  padding-right: 8px;
  padding-left: 8px;
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  -webkit-transition: 0.2s box-shadow,0.2s background-color;
  transition: 0.2s box-shadow,0.2s background-color;
}

.c1:disabled,
.c1[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
}

.c1:not(:disabled):not([aria-disabled]):focus,
.c1[aria-disabled='false']:focus {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c1:not(:disabled):not([aria-disabled]):focus:not(:focus-visible),
.c1[aria-disabled='false']:focus:not(:focus-visible) {
  box-shadow: none;
}

.c1:not(:disabled):not([aria-disabled]):focus-visible,
.c1[aria-disabled='false']:focus-visible {
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c1:not(:disabled):not([aria-disabled]):hover,
.c1[aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c1:not(:disabled):not([aria-disabled]):active,
.c1[aria-disabled='false']:active {
  background-color: var(--charcoal-surface3-press);
}

.c2 {
  text-align: left;
  font-size: 14px;
  line-height: 22px;
  display: flow-root;
  color: var(--charcoal-text2);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c3 {
  color: var(--charcoal-text2);
}

<div
  data-dark={false}
>
  <div
    style={
      Object {
        "width": 288,
      }
    }
  >
    <div
      aria-disabled={true}
      className="c0"
    >
      <div
        aria-hidden="true"
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "clipPath": "inset(50%)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
      >
        <select
          onChange={[Function]}
          tabIndex={-1}
          value="1"
        >
          <option
            value="1"
          >
            1
          </option>
          <option
            value="2"
          >
            2
          </option>
          <option
            value="3"
          >
            3
          </option>
        </select>
      </div>
      <button
        className="c1"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span
          className="c2"
        >
          Option 1
        </span>
        <pixiv-icon
          class="c3"
          name="16/Menu"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests DropdownSelector DisabledItem 1`] = `
.c0 {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 4px;
  width: 100%;
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
  opacity: 0.32;
}

.c1 {
  display: grid;
  grid-template-columns: 1fr auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 40px;
  width: 100%;
  box-sizing: border-box;
  border: none;
  cursor: pointer;
  gap: 4px;
  padding-right: 8px;
  padding-left: 8px;
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  -webkit-transition: 0.2s box-shadow,0.2s background-color;
  transition: 0.2s box-shadow,0.2s background-color;
}

.c1:disabled,
.c1[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
}

.c1:not(:disabled):not([aria-disabled]):focus,
.c1[aria-disabled='false']:focus {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c1:not(:disabled):not([aria-disabled]):focus:not(:focus-visible),
.c1[aria-disabled='false']:focus:not(:focus-visible) {
  box-shadow: none;
}

.c1:not(:disabled):not([aria-disabled]):focus-visible,
.c1[aria-disabled='false']:focus-visible {
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c1:not(:disabled):not([aria-disabled]):hover,
.c1[aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c1:not(:disabled):not([aria-disabled]):active,
.c1[aria-disabled='false']:active {
  background-color: var(--charcoal-surface3-press);
}

.c2 {
  text-align: left;
  font-size: 14px;
  line-height: 22px;
  display: flow-root;
  color: var(--charcoal-text2);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c3 {
  color: var(--charcoal-text2);
}

<div
  data-dark={false}
>
  <div
    style={
      Object {
        "width": 288,
      }
    }
  >
    <div
      className="c0"
    >
      <div
        aria-hidden="true"
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "clipPath": "inset(50%)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
      >
        <select
          onChange={[Function]}
          tabIndex={-1}
          value="2"
        >
          <option
            value="1"
          >
            1
          </option>
          <option
            disabled={true}
            value="2"
          >
            2
          </option>
          <option
            value="3"
          >
            3
          </option>
          <option
            value="4"
          >
            4
          </option>
          <option
            value="5"
          >
            5
          </option>
        </select>
      </div>
      <button
        className="c1"
        onClick={[Function]}
        type="button"
      >
        <span
          className="c2"
        >
          Option 2 (disabled)
        </span>
        <pixiv-icon
          class="c3"
          name="16/Menu"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests DropdownSelector InFormTag 1`] = `
.c0 {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 4px;
  width: 100%;
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
  opacity: 0.32;
}

.c1 {
  display: grid;
  grid-template-columns: 1fr auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 40px;
  width: 100%;
  box-sizing: border-box;
  border: none;
  cursor: pointer;
  gap: 4px;
  padding-right: 8px;
  padding-left: 8px;
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  -webkit-transition: 0.2s box-shadow,0.2s background-color;
  transition: 0.2s box-shadow,0.2s background-color;
}

.c1:disabled,
.c1[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
}

.c1:not(:disabled):not([aria-disabled]):focus,
.c1[aria-disabled='false']:focus {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c1:not(:disabled):not([aria-disabled]):focus:not(:focus-visible),
.c1[aria-disabled='false']:focus:not(:focus-visible) {
  box-shadow: none;
}

.c1:not(:disabled):not([aria-disabled]):focus-visible,
.c1[aria-disabled='false']:focus-visible {
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c1:not(:disabled):not([aria-disabled]):hover,
.c1[aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c1:not(:disabled):not([aria-disabled]):active,
.c1[aria-disabled='false']:active {
  background-color: var(--charcoal-surface3-press);
}

.c2 {
  text-align: left;
  font-size: 14px;
  line-height: 22px;
  display: flow-root;
  color: var(--charcoal-text2);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c3 {
  color: var(--charcoal-text2);
}

<div
  data-dark={false}
>
  <form
    onSubmit={[Function]}
    style={
      Object {
        "display": "flex",
        "width": 288,
      }
    }
  >
    <div
      className="c0"
    >
      <div
        aria-hidden="true"
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "clipPath": "inset(50%)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
      >
        <select
          name="exampleOption"
          onChange={[Function]}
          tabIndex={-1}
          value="1"
        >
          <option
            value="1"
          >
            1
          </option>
          <option
            value="2"
          >
            2
          </option>
          <option
            value="3"
          >
            3
          </option>
        </select>
      </div>
      <button
        className="c1"
        onClick={[Function]}
        type="button"
      >
        <span
          className="c2"
        >
          Option 1
        </span>
        <pixiv-icon
          class="c3"
          name="16/Menu"
        />
      </button>
    </div>
    <button
      className="charcoal-button"
      data-variant="Primary"
      style={
        Object {
          "marginLeft": 16,
        }
      }
      type="submit"
    >
      submit
    </button>
  </form>
</div>
`;

exports[`Storybook Tests DropdownSelector InModal 1`] = `
.c11 {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 4px;
}

.c12 {
  display: grid;
  grid-template-columns: 1fr;
  height: 40px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  gap: 4px;
  padding: 0 8px;
  line-height: 22px;
  font-size: 14px;
}

.c12:not(:disabled):not([aria-disabled]):hover,
.c12 [aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c12:focus-within {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c13 {
  border: none;
  box-sizing: border-box;
  outline: none;
  font-family: inherit;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transform: scale(0.875);
  -ms-transform: scale(0.875);
  transform: scale(0.875);
  width: calc(100% / 0.875);
  height: calc(100% / 0.875);
  font-size: calc(14px / 0.875);
  line-height: calc(22px / 0.875);
  padding-left: 0;
  padding-right: 0;
  border-radius: calc(4px / 0.875);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  color: var(--charcoal-text2);
}

.c13::-webkit-input-placeholder {
  color: var(--charcoal-text3);
}

.c13::-moz-placeholder {
  color: var(--charcoal-text3);
}

.c13:-ms-input-placeholder {
  color: var(--charcoal-text3);
}

.c13::placeholder {
  color: var(--charcoal-text3);
}

.c10 {
  font-size: 14px;
  line-height: 22px;
  margin: 0;
  color: var(--charcoal-text2);
}

.c6 {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 4px;
  width: 100%;
}

.c6:disabled,
.c6[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
  opacity: 0.32;
}

.c7 {
  display: grid;
  grid-template-columns: 1fr auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 40px;
  width: 100%;
  box-sizing: border-box;
  border: none;
  cursor: pointer;
  gap: 4px;
  padding-right: 8px;
  padding-left: 8px;
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  -webkit-transition: 0.2s box-shadow,0.2s background-color;
  transition: 0.2s box-shadow,0.2s background-color;
}

.c7:disabled,
.c7[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
}

.c7:not(:disabled):not([aria-disabled]):focus,
.c7[aria-disabled='false']:focus {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c7:not(:disabled):not([aria-disabled]):focus:not(:focus-visible),
.c7[aria-disabled='false']:focus:not(:focus-visible) {
  box-shadow: none;
}

.c7:not(:disabled):not([aria-disabled]):focus-visible,
.c7[aria-disabled='false']:focus-visible {
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c7:not(:disabled):not([aria-disabled]):hover,
.c7[aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c7:not(:disabled):not([aria-disabled]):active,
.c7[aria-disabled='false']:active {
  background-color: var(--charcoal-surface3-press);
}

.c8 {
  text-align: left;
  font-size: 14px;
  line-height: 22px;
  display: flow-root;
  color: var(--charcoal-text2);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c9 {
  color: var(--charcoal-text2);
}

.c17 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: var(--charcoal-text3);
  background-color: var(--charcoal-transparent);
  border-radius: 999999px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
}

.c17:not(:disabled):not([aria-disabled]):hover,
.c17[aria-disabled='false']:hover {
  color: var(--charcoal-text3-hover);
  background-color: var(--charcoal-transparent-hover);
}

.c17:not(:disabled):not([aria-disabled]):active,
.c17[aria-disabled='false']:active {
  color: var(--charcoal-text3-press);
  background-color: var(--charcoal-transparent-press);
}

.c17:not(:disabled):not([aria-disabled]):focus,
.c17[aria-disabled='false']:focus {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c17:not(:disabled):not([aria-disabled]):focus:not(:focus-visible),
.c17[aria-disabled='false']:focus:not(:focus-visible) {
  box-shadow: none;
}

.c17:not(:disabled):not([aria-disabled]):focus-visible,
.c17[aria-disabled='false']:focus-visible {
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c17:disabled,
.c17[aria-disabled]:not([aria-disabled='false']) {
  opacity: 0.32;
}

.c1 {
  margin: auto;
  position: relative;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  width: 440px;
  background-color: var(--charcoal-surface1);
  border-radius: 24px;
}

.c1:focus {
  outline: none;
}

.c0 {
  z-index: 10;
  overflow: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  top: 0;
  left: 0;
  width: -webkit-fill-available;
  width: -moz-available;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 40px 0;
  box-sizing: border-box;
  background-color: var(--charcoal-surface4);
}

.c18 {
  position: absolute;
  top: 8px;
  right: 8px;
  color: var(--charcoal-text3);
  -webkit-transition: 0.2s color;
  transition: 0.2s color;
}

.c18:not(:disabled):not([aria-disabled]):hover,
.c18[aria-disabled='false']:hover {
  color: var(--charcoal-text3-hover);
}

.c18:not(:disabled):not([aria-disabled]):active,
.c18[aria-disabled='false']:active {
  color: var(--charcoal-text3-press);
}

.c3 {
  margin: 0;
  font-weight: inherit;
  font-size: inherit;
}

.c2 {
  height: 64px;
  display: grid;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 {
  color: var(--charcoal-text1);
  font-size: 16px;
  line-height: 24px;
  font-weight: bold;
  display: flow-root;
}

.c4::before {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-top: -4px;
}

.c4::after {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-bottom: -4px;
}

.c5 {
  padding-bottom: 40px;
}

.c14 {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 4px;
}

.c15 {
  position: relative;
  overflow: hidden;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
  height: calc(22px * 4 + 18px);
}

.c15:not([aria-disabled]):hover,
.c15 [aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c15:focus-within {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c16 {
  border: none;
  outline: none;
  resize: none;
  font-family: inherit;
  color: inherit;
  box-sizing: border-box;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transform: scale(0.875);
  -ms-transform: scale(0.875);
  transform: scale(0.875);
  width: calc(100% / 0.875);
  font-size: calc(14px / 0.875);
  line-height: calc(22px / 0.875);
  padding: calc(9px / 0.875) calc(8px / 0.875);
  height: calc(22px / 0.875 * 4 + 20px);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
}

.c16::-webkit-input-placeholder {
  color: var(--charcoal-text3);
}

.c16::-moz-placeholder {
  color: var(--charcoal-text3);
}

.c16:-ms-input-placeholder {
  color: var(--charcoal-text3);
}

.c16::placeholder {
  color: var(--charcoal-text3);
}

@media (max-width:743px) {
  .c1 {
    max-width: 440px;
    width: calc(100% - 48px);
    max-width: unset;
    width: 100%;
    border-radius: 0;
    margin: auto 0 0 0;
    min-height: 100%;
  }
}

@media (max-width:743px) {
  .c0 {
    padding: 0;
  }
}

@media (max-width:743px) {
  .c2 {
    height: 48px;
  }
}

<div
  data-dark={false}
>
  <div
    style={
      Object {
        "height": "10px",
      }
    }
  >
    <button
      onClick={[Function]}
    >
      open
    </button>
    <div
      className="c0"
      onClick={[Function]}
      onPointerDown={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(0, 0, 0, 0)",
          "overflow": "hidden",
        }
      }
    >
      <div
        className="c1"
        onBlur={[Function]}
        onKeyDown={[Function]}
        role="dialog"
        size="M"
        style={
          Object {
            "transform": " translateY(100%)",
          }
        }
        tabIndex={-1}
      >
        <div
          className="c2"
        >
          <h3
            className="c3 c4"
          >
            modal
          </h3>
        </div>
        <div
          className="c5"
        >
          <div
            style={
              Object {
                "display": "grid",
                "gap": 40,
                "padding": 16,
              }
            }
          >
            <div
              className="c6"
            >
              <div
                className="charcoal-field-label-root"
              >
                <label
                  className="charcoal-field-label"
                >
                  DropdownSelector1
                </label>
                <div
                  className="charcoal-field-label-required-text"
                >
                  required
                </div>
                <div
                  className="charcoal-field-label-sub-label"
                >
                  <span />
                </div>
              </div>
              <div
                aria-hidden="true"
                style={
                  Object {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": "1px",
                    "margin": "-1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": "1px",
                  }
                }
              >
                <select
                  onChange={[Function]}
                  tabIndex={-1}
                  value="1"
                >
                  <option
                    value="1"
                  >
                    1
                  </option>
                  <option
                    value="2"
                  >
                    2
                  </option>
                  <option
                    value="3"
                  >
                    3
                  </option>
                </select>
              </div>
              <button
                className="c7"
                onClick={[Function]}
                type="button"
              >
                <span
                  className="c8"
                >
                  Option 1
                </span>
                <pixiv-icon
                  class="c9"
                  name="16/Menu"
                />
              </button>
              <p
                className="c10"
              >
                assistiveText
              </p>
            </div>
            <div
              className="c11"
            >
              <div
                className="charcoal-field-label-root"
              >
                <label
                  className="charcoal-field-label"
                  htmlFor="test-id"
                  id="test-id"
                >
                  TextField
                </label>
                <div
                  className="charcoal-field-label-required-text"
                >
                  required
                </div>
                <div
                  className="charcoal-field-label-sub-label"
                >
                  <span />
                </div>
              </div>
              <div
                className="c12"
              >
                <input
                  aria-describedby="test-id"
                  aria-labelledby="test-id"
                  className="c13"
                  id="test-id"
                  onChange={[Function]}
                  placeholder="placeholder"
                  type="text"
                />
              </div>
              <p
                className="c10"
                id="test-id"
              >
                assistiveText
              </p>
            </div>
            <div
              className="c14"
            >
              <div
                className="charcoal-field-label-root"
              >
                <label
                  className="charcoal-field-label"
                  htmlFor="test-id"
                  id="test-id"
                >
                  TextArea
                </label>
                <div
                  className="charcoal-field-label-required-text"
                >
                  required
                </div>
                <div
                  className="charcoal-field-label-sub-label"
                >
                  <span />
                </div>
              </div>
              <div
                className="c15"
                rows={4}
              >
                <textarea
                  aria-describedby="test-id"
                  aria-labelledby="test-id"
                  className="c16"
                  id="test-id"
                  onChange={[Function]}
                  placeholder="placeholder"
                  rows={4}
                />
              </div>
              <p
                className="c10"
                id="test-id"
              >
                assistiveText
              </p>
            </div>
            <div
              className="c6"
            >
              <div
                className="charcoal-field-label-root"
              >
                <label
                  className="charcoal-field-label"
                >
                  DropdownSelector2
                </label>
                <div
                  className="charcoal-field-label-required-text"
                >
                  required
                </div>
                <div
                  className="charcoal-field-label-sub-label"
                >
                  <span />
                </div>
              </div>
              <div
                aria-hidden="true"
                style={
                  Object {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": "1px",
                    "margin": "-1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": "1px",
                  }
                }
              >
                <select
                  onChange={[Function]}
                  tabIndex={-1}
                  value="2"
                >
                  <option
                    value="1"
                  >
                    1
                  </option>
                  <option
                    value="2"
                  >
                    2
                  </option>
                  <option
                    value="3"
                  >
                    3
                  </option>
                </select>
              </div>
              <button
                className="c7"
                onClick={[Function]}
                type="button"
              >
                <span
                  className="c8"
                >
                  Option 2
                </span>
                <pixiv-icon
                  class="c9"
                  name="16/Menu"
                />
              </button>
              <p
                className="c10"
              >
                assistiveText
              </p>
            </div>
          </div>
        </div>
        <button
          className="charcoal-clickable c17 c18"
          onClick={[Function]}
        >
          <pixiv-icon
            name="24/Close"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests DropdownSelector Invalid 1`] = `
.c0 {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 4px;
  width: 100%;
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
  opacity: 0.32;
}

.c1 {
  display: grid;
  grid-template-columns: 1fr auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 40px;
  width: 100%;
  box-sizing: border-box;
  border: none;
  cursor: pointer;
  gap: 4px;
  padding-right: 8px;
  padding-left: 8px;
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  -webkit-transition: 0.2s box-shadow,0.2s background-color;
  transition: 0.2s box-shadow,0.2s background-color;
}

.c1:disabled,
.c1[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
}

.c1:not(:disabled):not([aria-disabled]):focus,
.c1[aria-disabled='false']:focus {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c1:not(:disabled):not([aria-disabled]):focus:not(:focus-visible),
.c1[aria-disabled='false']:focus:not(:focus-visible) {
  box-shadow: none;
}

.c1:not(:disabled):not([aria-disabled]):focus-visible,
.c1[aria-disabled='false']:focus-visible {
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c1:not(:disabled):not([aria-disabled]):hover,
.c1[aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c1:not(:disabled):not([aria-disabled]):active,
.c1[aria-disabled='false']:active {
  background-color: var(--charcoal-surface3-press);
}

.c1:not(:disabled):not([aria-disabled]),
.c1[aria-disabled='false'] {
  box-shadow: 0 0 0 4px rgba(255,43,0,0.32);
}

.c2 {
  text-align: left;
  font-size: 14px;
  line-height: 22px;
  display: flow-root;
  color: var(--charcoal-text2);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c3 {
  color: var(--charcoal-text2);
}

<div
  data-dark={false}
>
  <div
    style={
      Object {
        "width": 288,
      }
    }
  >
    <div
      className="c0"
    >
      <div
        aria-hidden="true"
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "clipPath": "inset(50%)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
      >
        <select
          onChange={[Function]}
          tabIndex={-1}
          value="1"
        >
          <option
            value="1"
          >
            1
          </option>
          <option
            value="2"
          >
            2
          </option>
          <option
            value="3"
          >
            3
          </option>
        </select>
      </div>
      <button
        className="c1"
        onClick={[Function]}
        type="button"
      >
        <span
          className="c2"
        >
          Option 1
        </span>
        <pixiv-icon
          class="c3"
          name="16/Menu"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests DropdownSelector InvalidAssistiveText 1`] = `
.c4 {
  font-size: 14px;
  line-height: 22px;
  margin: 0;
  color: var(--charcoal-assertive);
}

.c0 {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 4px;
  width: 100%;
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
  opacity: 0.32;
}

.c1 {
  display: grid;
  grid-template-columns: 1fr auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 40px;
  width: 100%;
  box-sizing: border-box;
  border: none;
  cursor: pointer;
  gap: 4px;
  padding-right: 8px;
  padding-left: 8px;
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  -webkit-transition: 0.2s box-shadow,0.2s background-color;
  transition: 0.2s box-shadow,0.2s background-color;
}

.c1:disabled,
.c1[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
}

.c1:not(:disabled):not([aria-disabled]):focus,
.c1[aria-disabled='false']:focus {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c1:not(:disabled):not([aria-disabled]):focus:not(:focus-visible),
.c1[aria-disabled='false']:focus:not(:focus-visible) {
  box-shadow: none;
}

.c1:not(:disabled):not([aria-disabled]):focus-visible,
.c1[aria-disabled='false']:focus-visible {
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c1:not(:disabled):not([aria-disabled]):hover,
.c1[aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c1:not(:disabled):not([aria-disabled]):active,
.c1[aria-disabled='false']:active {
  background-color: var(--charcoal-surface3-press);
}

.c1:not(:disabled):not([aria-disabled]),
.c1[aria-disabled='false'] {
  box-shadow: 0 0 0 4px rgba(255,43,0,0.32);
}

.c2 {
  text-align: left;
  font-size: 14px;
  line-height: 22px;
  display: flow-root;
  color: var(--charcoal-text2);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c3 {
  color: var(--charcoal-text2);
}

<div
  data-dark={false}
>
  <div
    style={
      Object {
        "width": 288,
      }
    }
  >
    <div
      className="c0"
    >
      <div
        aria-hidden="true"
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "clipPath": "inset(50%)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
      >
        <select
          onChange={[Function]}
          tabIndex={-1}
          value="1"
        >
          <option
            value="1"
          >
            1
          </option>
          <option
            value="2"
          >
            2
          </option>
          <option
            value="3"
          >
            3
          </option>
        </select>
      </div>
      <button
        className="c1"
        onClick={[Function]}
        type="button"
      >
        <span
          className="c2"
        >
          Option 1
        </span>
        <pixiv-icon
          class="c3"
          name="16/Menu"
        />
      </button>
      <p
        className="c4"
      >
        assistiveText
      </p>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests DropdownSelector Label 1`] = `
.c0 {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 4px;
  width: 100%;
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
  opacity: 0.32;
}

.c1 {
  display: grid;
  grid-template-columns: 1fr auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 40px;
  width: 100%;
  box-sizing: border-box;
  border: none;
  cursor: pointer;
  gap: 4px;
  padding-right: 8px;
  padding-left: 8px;
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  -webkit-transition: 0.2s box-shadow,0.2s background-color;
  transition: 0.2s box-shadow,0.2s background-color;
}

.c1:disabled,
.c1[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
}

.c1:not(:disabled):not([aria-disabled]):focus,
.c1[aria-disabled='false']:focus {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c1:not(:disabled):not([aria-disabled]):focus:not(:focus-visible),
.c1[aria-disabled='false']:focus:not(:focus-visible) {
  box-shadow: none;
}

.c1:not(:disabled):not([aria-disabled]):focus-visible,
.c1[aria-disabled='false']:focus-visible {
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c1:not(:disabled):not([aria-disabled]):hover,
.c1[aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c1:not(:disabled):not([aria-disabled]):active,
.c1[aria-disabled='false']:active {
  background-color: var(--charcoal-surface3-press);
}

.c2 {
  text-align: left;
  font-size: 14px;
  line-height: 22px;
  display: flow-root;
  color: var(--charcoal-text2);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c3 {
  color: var(--charcoal-text2);
}

<div
  data-dark={false}
>
  <div
    style={
      Object {
        "width": 288,
      }
    }
  >
    <div
      className="c0"
    >
      <div
        className="charcoal-field-label-root"
      >
        <label
          className="charcoal-field-label"
        >
          Label
        </label>
        <div
          className="charcoal-field-label-sub-label"
        >
          <span />
        </div>
      </div>
      <div
        aria-hidden="true"
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "clipPath": "inset(50%)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
      >
        <select
          onChange={[Function]}
          tabIndex={-1}
          value="1"
        >
          <option
            value="1"
          >
            1
          </option>
          <option
            value="2"
          >
            2
          </option>
          <option
            value="3"
          >
            3
          </option>
        </select>
      </div>
      <button
        className="c1"
        onClick={[Function]}
        type="button"
      >
        <span
          className="c2"
        >
          Option 1
        </span>
        <pixiv-icon
          class="c3"
          name="16/Menu"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests DropdownSelector LongNames 1`] = `
.c0 {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 4px;
  width: 100%;
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
  opacity: 0.32;
}

.c1 {
  display: grid;
  grid-template-columns: 1fr auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 40px;
  width: 100%;
  box-sizing: border-box;
  border: none;
  cursor: pointer;
  gap: 4px;
  padding-right: 8px;
  padding-left: 8px;
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  -webkit-transition: 0.2s box-shadow,0.2s background-color;
  transition: 0.2s box-shadow,0.2s background-color;
}

.c1:disabled,
.c1[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
}

.c1:not(:disabled):not([aria-disabled]):focus,
.c1[aria-disabled='false']:focus {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c1:not(:disabled):not([aria-disabled]):focus:not(:focus-visible),
.c1[aria-disabled='false']:focus:not(:focus-visible) {
  box-shadow: none;
}

.c1:not(:disabled):not([aria-disabled]):focus-visible,
.c1[aria-disabled='false']:focus-visible {
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c1:not(:disabled):not([aria-disabled]):hover,
.c1[aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c1:not(:disabled):not([aria-disabled]):active,
.c1[aria-disabled='false']:active {
  background-color: var(--charcoal-surface3-press);
}

.c2 {
  text-align: left;
  font-size: 14px;
  line-height: 22px;
  display: flow-root;
  color: var(--charcoal-text2);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c3 {
  color: var(--charcoal-text2);
}

<div
  data-dark={false}
>
  <div
    style={
      Object {
        "width": 288,
      }
    }
  >
    <div
      className="c0"
    >
      <div
        aria-hidden="true"
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "clipPath": "inset(50%)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
      >
        <select
          onChange={[Function]}
          tabIndex={-1}
          value="1"
        >
          <option
            value="1"
          >
            1
          </option>
          <option
            value="2"
          >
            2
          </option>
          <option
            value="3"
          >
            3
          </option>
        </select>
      </div>
      <button
        className="c1"
        onClick={[Function]}
        type="button"
      >
        <span
          className="c2"
        >
          Lorem ipsum dolor sit amet, consectetur adipisicing elit,
        </span>
        <pixiv-icon
          class="c3"
          name="16/Menu"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests DropdownSelector RequiredText 1`] = `
.c0 {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 4px;
  width: 100%;
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
  opacity: 0.32;
}

.c1 {
  display: grid;
  grid-template-columns: 1fr auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 40px;
  width: 100%;
  box-sizing: border-box;
  border: none;
  cursor: pointer;
  gap: 4px;
  padding-right: 8px;
  padding-left: 8px;
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  -webkit-transition: 0.2s box-shadow,0.2s background-color;
  transition: 0.2s box-shadow,0.2s background-color;
}

.c1:disabled,
.c1[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
}

.c1:not(:disabled):not([aria-disabled]):focus,
.c1[aria-disabled='false']:focus {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c1:not(:disabled):not([aria-disabled]):focus:not(:focus-visible),
.c1[aria-disabled='false']:focus:not(:focus-visible) {
  box-shadow: none;
}

.c1:not(:disabled):not([aria-disabled]):focus-visible,
.c1[aria-disabled='false']:focus-visible {
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c1:not(:disabled):not([aria-disabled]):hover,
.c1[aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c1:not(:disabled):not([aria-disabled]):active,
.c1[aria-disabled='false']:active {
  background-color: var(--charcoal-surface3-press);
}

.c1:not(:disabled):not([aria-disabled]),
.c1[aria-disabled='false'] {
  box-shadow: 0 0 0 4px rgba(255,43,0,0.32);
}

.c2 {
  text-align: left;
  font-size: 14px;
  line-height: 22px;
  display: flow-root;
  color: var(--charcoal-text2);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c3 {
  color: var(--charcoal-text2);
}

<div
  data-dark={false}
>
  <div
    style={
      Object {
        "width": 288,
      }
    }
  >
    <div
      className="c0"
    >
      <div
        className="charcoal-field-label-root"
      >
        <label
          className="charcoal-field-label"
        >
          Label
        </label>
        <div
          className="charcoal-field-label-required-text"
        >
          required
        </div>
        <div
          className="charcoal-field-label-sub-label"
        >
          <span />
        </div>
      </div>
      <div
        aria-hidden="true"
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "clipPath": "inset(50%)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
      >
        <select
          onChange={[Function]}
          tabIndex={-1}
          value="1"
        >
          <option
            value="1"
          >
            1
          </option>
          <option
            value="2"
          >
            2
          </option>
          <option
            value="3"
          >
            3
          </option>
        </select>
      </div>
      <button
        className="c1"
        onClick={[Function]}
        type="button"
      >
        <span
          className="c2"
        >
          Option 1
        </span>
        <pixiv-icon
          class="c3"
          name="16/Menu"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests DropdownSelector Section 1`] = `
.c0 {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 4px;
  width: 100%;
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
  opacity: 0.32;
}

.c1 {
  display: grid;
  grid-template-columns: 1fr auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 40px;
  width: 100%;
  box-sizing: border-box;
  border: none;
  cursor: pointer;
  gap: 4px;
  padding-right: 8px;
  padding-left: 8px;
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  -webkit-transition: 0.2s box-shadow,0.2s background-color;
  transition: 0.2s box-shadow,0.2s background-color;
}

.c1:disabled,
.c1[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
}

.c1:not(:disabled):not([aria-disabled]):focus,
.c1[aria-disabled='false']:focus {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c1:not(:disabled):not([aria-disabled]):focus:not(:focus-visible),
.c1[aria-disabled='false']:focus:not(:focus-visible) {
  box-shadow: none;
}

.c1:not(:disabled):not([aria-disabled]):focus-visible,
.c1[aria-disabled='false']:focus-visible {
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c1:not(:disabled):not([aria-disabled]):hover,
.c1[aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c1:not(:disabled):not([aria-disabled]):active,
.c1[aria-disabled='false']:active {
  background-color: var(--charcoal-surface3-press);
}

.c2 {
  text-align: left;
  font-size: 14px;
  line-height: 22px;
  display: flow-root;
  color: var(--charcoal-text2);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c3 {
  color: var(--charcoal-text2);
}

<div
  data-dark={false}
>
  <div
    style={
      Object {
        "width": 288,
      }
    }
  >
    <div
      className="c0"
    >
      <div
        aria-hidden="true"
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "clipPath": "inset(50%)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
      >
        <select
          onChange={[Function]}
          tabIndex={-1}
          value="banana"
        >
          <option
            value="apple"
          >
            apple
          </option>
          <option
            value="banana"
          >
            banana
          </option>
          <option
            value="orange"
          >
            orange
          </option>
          <option
            value="bicycle"
          >
            bicycle
          </option>
          <option
            value="car"
          >
            car
          </option>
          <option
            value="train"
          >
            train
          </option>
        </select>
      </div>
      <button
        className="c1"
        onClick={[Function]}
        type="button"
      >
        <span
          className="c2"
        >
          Banana
        </span>
        <pixiv-icon
          class="c3"
          name="16/Menu"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests DropdownSelector SubLabel 1`] = `
.c0 {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 4px;
  width: 100%;
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
  opacity: 0.32;
}

.c1 {
  display: grid;
  grid-template-columns: 1fr auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 40px;
  width: 100%;
  box-sizing: border-box;
  border: none;
  cursor: pointer;
  gap: 4px;
  padding-right: 8px;
  padding-left: 8px;
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  -webkit-transition: 0.2s box-shadow,0.2s background-color;
  transition: 0.2s box-shadow,0.2s background-color;
}

.c1:disabled,
.c1[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
}

.c1:not(:disabled):not([aria-disabled]):focus,
.c1[aria-disabled='false']:focus {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c1:not(:disabled):not([aria-disabled]):focus:not(:focus-visible),
.c1[aria-disabled='false']:focus:not(:focus-visible) {
  box-shadow: none;
}

.c1:not(:disabled):not([aria-disabled]):focus-visible,
.c1[aria-disabled='false']:focus-visible {
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c1:not(:disabled):not([aria-disabled]):hover,
.c1[aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c1:not(:disabled):not([aria-disabled]):active,
.c1[aria-disabled='false']:active {
  background-color: var(--charcoal-surface3-press);
}

.c1:not(:disabled):not([aria-disabled]),
.c1[aria-disabled='false'] {
  box-shadow: 0 0 0 4px rgba(255,43,0,0.32);
}

.c2 {
  text-align: left;
  font-size: 14px;
  line-height: 22px;
  display: flow-root;
  color: var(--charcoal-text2);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c3 {
  color: var(--charcoal-text2);
}

<div
  data-dark={false}
>
  <div
    style={
      Object {
        "width": 288,
      }
    }
  >
    <div
      className="c0"
    >
      <div
        className="charcoal-field-label-root"
      >
        <label
          className="charcoal-field-label"
        >
          Label
        </label>
        <div
          className="charcoal-field-label-sub-label"
        >
          <span>
            SubLabel
          </span>
        </div>
      </div>
      <div
        aria-hidden="true"
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "clipPath": "inset(50%)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
      >
        <select
          onChange={[Function]}
          tabIndex={-1}
          value="1"
        >
          <option
            value="1"
          >
            1
          </option>
          <option
            value="2"
          >
            2
          </option>
          <option
            value="3"
          >
            3
          </option>
        </select>
      </div>
      <button
        className="c1"
        onClick={[Function]}
        type="button"
      >
        <span
          className="c2"
        >
          Option 1
        </span>
        <pixiv-icon
          class="c3"
          name="16/Menu"
        />
      </button>
    </div>
  </div>
</div>
`;
